--- a/backend-interview-csharp/docker-compose.yml
+++ b/backend-interview-csharp/docker-compose.yml
@@ -12,5 +12,24 @@ services:
     volumes:
       - sqlserver_data:/var/opt/mssql
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+
 volumes:
   sqlserver_data:
+  redis_data:
+  rabbitmq_data:
