--- a/backend-interview-nodejs/docker-compose.yml
+++ b/backend-interview-nodejs/docker-compose.yml
@@ -14,5 +14,24 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:latest
+    container_name: redis-node
+    ports:
+      - "6380:6379"
+    volumes:
+      - redis_data_node:/data
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq-node
+    ports:
+      - "5673:5672"
+      - "15673:15672"
+    volumes:
+      - rabbitmq_data_node:/var/lib/rabbitmq
+
 volumes:
   postgres_data:
+  redis_data_node:
+  rabbitmq_data_node:
